# cmake-c-cpp-project-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Ansi.cmake  BuildDir.cmake  CompileOptions.cmake  Cppcheck.cmake  Msg.cmake  Print.cmake
src/: CMakeLists.txt
src/app/: main.cc
